# projects

./: README.md
C++/: ordered_linked_list.cpp
C++/OOP/: dynamic_pascals_triangle.cpp
C++/OOP/dynamic_pascals/: CMakeLists.txt
C++/OOP/ordered_linked_list/: CMakeLists.txt
C++/dynamic_pascals_triangle/: README.md
C++/newton_root_finding/: README.md  newton_root_templatized.cpp
C++/ordered_linked_list/: README.md  ordered_linked_list.cpp
C++/root_finding/: CMakeLists.txt  newton_root_templatized.cpp
C++/the_great_garbage_patch/: CMakeLists.txt  README.md  ocean.cpp  ocean.sh
Python/Coinbase_caseStudy/: onboarding_process_analysis.ipynb
Python/Coinbase_caseStudy/data/: trades.csv
Python/GDP_Energy_Analysis/: GDP_Energy.ipynb  README.md
Python/RK4_scheme/: README.md
Python/SportsTeam_Performance_by_Cities/: analysis.ipynb
Python/numerical_methods/: Runge_Kutta_4_scheme.py
Python/user_onboarding_analysis/: onboarding_process_analysis.ipynb
Python/user_onboarding_analysis/data/: id_verification.csv  users.csv
chapter_builders-guide/: model-construction.ipynb
